# custom-webserver

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  server.conf  server_log.txt
.github/workflows/: build.yml  publish.yml
include/: config.hpp  connectionmanager.hpp  epoll.hpp  httphandler.hpp  httprequest.hpp  logger.hpp  server.hpp  session.hpp  socket.hpp  threadpool.hpp
public/: index.html  style.css
src/: config.cpp  connectionmanager.cpp  epoll.cpp  httphandler.cpp  httprequest.cpp  logger.cpp  main.cpp  server.cpp  socket.cpp  threadpool.cpp
tests/: test_config.cpp  test_http_parser.cpp
